add choose phone number and email

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,11 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
+          <activity
+            android:name=".ContactDetailsActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
