--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,12 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/converter-gson-2.0.0-beta2.jar"/>
+	<classpathentry kind="lib" path="libs/fastjson-1.2.7.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.4.jar"/>
+	<classpathentry kind="lib" path="libs/okhttp-2.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/okio-1.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/retrofit-2.0.0-beta2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
