add job details

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -72,6 +72,11 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
+        <activity
+            android:name=".JobDetailsActivity"
+            android:configChanges="screenSize|keyboardHidden|orientation"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
