--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,7 +51,7 @@
             android:name=".MainMenuItemActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="stateHidden|adjustResize" >
         </activity>
         <activity
             android:name=".ForgotPasswordActivity"
